# crypto_news_api

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json
Backend/: Cargo.toml
Backend/src/: main.rs
Frontend/: package-lock.json  vite.config.ts
Frontend/src/: App.tsx  index.css  types.ts
Frontend/src/components/: Filters.tsx  NewsCard.tsx  SearchBar.tsx  ThemeToggle.tsx
src/src/: main.rs
static/: index.html
