[package]
name = "Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }  # Add the "derive" feature
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] } # Add this
tower = "0.5.2"
